# generateur-insee

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: cli.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py
backend/app/routers/: __init__.py  establishments.py  generation.py  imports.py  pages.py  prompts.py  sites.py
backend/app/services/: generation.py  geocoding.py  sirene.py
frontend/: index.html  package.json
frontend/src/: main.tsx  styles.css
frontend/src/components/: EstablishmentsMap.tsx  ImportJobsManager.tsx  ManualPagesManager.tsx  PromptManager.tsx  SiteDetails.tsx  SiteForm.tsx  SiteList.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: App.tsx
