[project]
name = "generateur-insee-backend"
version = "0.1.0"
description = "Plateforme d'annuaires métiers - backend FastAPI"
authors = [{name = "AI"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlmodel>=0.0.19",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "openai>=1.14.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
